# budoka

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_base.txt
config/jupyterlab/: migrated
config/jupyterlab/lab/user-settings/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
config/jupyterlab/lab/workspaces/: default-37a8.jupyterlab-workspace
docker/: Dockerfile  docker-compose.yml
sample/: README.md  pyproject.toml
sample/docs/source/: conf.py  index.rst
sample/mlruns/0/: meta.yaml
sample/mlruns/0/f66dc4f8678f4c6a8b4122c5c0afd14c/: meta.yaml
sample/mlruns/0/f66dc4f8678f4c6a8b4122c5c0afd14c/metrics/: accuracy_score
sample/mlruns/0/f66dc4f8678f4c6a8b4122c5c0afd14c/params/: model_name
sample/mlruns/0/f66dc4f8678f4c6a8b4122c5c0afd14c/tags/: mlflow.runName
sample/notebooks/: check_catalog.ipynb  prototype_LinearSVM.ipynb
sample/src/: setup.py
sample/src/sample/: __init__.py  __main__.py  hooks.py  settings.py
sample/src/tests/: test_run.py
src/project/: .gitignore  README.md  pyproject.toml
src/project/conf/base/: catalog.yml  logging.yml  parameters_data_collecting.yml  parameters_feature_engineering.yml  parameters_predicting.yml  parameters_training.yml
src/project/notebooks/: Untitled.ipynb
src/project/notebooks/data_collectiong/: load_data.ipynb
src/project/src/: pyproject.toml
src/project/src/project/: __main__.py  pipeline_registry.py  settings.py
src/project/src/project/pipelines/data_collecting/: __init__.py  (+2 more)
src/project/src/tests/: test_run.py
(+14 files in other folders)
