[tool.poetry]
name = "budoka"
version = "1.0"
description = "A short description of the project"
authors = ["Your address email (you@example.com)"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pandas = "^2.1.0"
numpy = "^1.25.2"
kedro = "^0.18.13"
hydra-core = "^1.3.2"
optuna = "^3.3.0"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"
lightgbm = "^4.0.0"
prophet = "^1.1"
mlflow = "^2.5.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



